显示鼠标按下时的十字线以及实时数值显示

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,6 +18,13 @@
     <item>
      <widget class="LineChart" name="widget" native="true"/>
     </item>
+    <item>
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>add</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
