--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -34,6 +34,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_3">
+        <property name="text">
+         <string>add+remove</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
